[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wavemaker-wmx-mcp"
version = "1.0.0"
description = "MCP server for WaveMaker WMX component marketplace integration"
authors = [{name = "Vivek Raj", email = "vivek.raj@wavemaker.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "fast-mcp>=0.1.0",
    "httpx>=0.25.0",
    "GitPython>=3.1.40",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
    "pathspec>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.scripts]
wavemaker-wmx-mcp = "wavemaker_wmx_mcp.server:main"